# purupuru-ttrpg

./: .gitattributes  .gitignore  .gitleaksignore  .loa-version.json  .loa.config.yaml  .loa.config.yaml.example  .oxfmtrc.json  .oxlintrc.json  .trufflehog.yaml  .vercelignore  BUTTERFREEZONE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE.md  README.md  SECURITY.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json  vitest.config.mts  vitest.config.ts
.beads/: issues.jsonl
.claude/: checksums.json  mcp-registry.yaml  reserved-commands.yaml  settings.json  workflow-chain.yaml
.claude/adapters/: cheval.py  pyproject.toml
.claude/adapters/loa_cheval/: __init__.py  audit_envelope.py  jcs.py  types.py
.claude/adapters/loa_cheval/audit/: __init__.py  modelinv.py
.claude/adapters/loa_cheval/codegen/: __init__.py  emit_endpoint_validator_ts.py  emit_model_resolver_ts.py
.claude/adapters/loa_cheval/config/: __init__.py  advisor_strategy.py  interpolation.py  loader.py  redaction.py
.claude/adapters/loa_cheval/credentials/: __init__.py  health.py  providers.py  store.py
.claude/adapters/loa_cheval/metering/: __init__.py  budget.py  ledger.py  pricing.py  rate_limiter.py
.claude/adapters/loa_cheval/providers/: __init__.py  anthropic_adapter.py  anthropic_streaming.py  base.py  bedrock_adapter.py  bedrock_token_age.py  claude_headless_adapter.py  codex_headless_adapter.py  concurrency.py  gemini_headless_adapter.py  google_adapter.py  google_streaming.py  openai_adapter.py  openai_streaming.py  retry.py  streaming_caps.py
.claude/adapters/loa_cheval/redaction/: __init__.py  sanitize.py
.claude/adapters/loa_cheval/routing/: __init__.py  capability_gate.py  chain_resolver.py  chains.py  circuit_breaker.py  context_filter.py  resolver.py  tier_groups.py  types.py
.claude/adapters/tests/: test_anthropic_streaming.py  test_bedrock_adapter.py  test_bedrock_compliance_loader.py  test_bedrock_live.py  test_bedrock_redaction_adversarial.py  test_bedrock_token_age.py  test_budget_fallback.py  test_capability_gate.py  test_chain_resolver_modes.py  test_chain_resolver_within_company.py  test_chain_walk_audit_envelope.py  test_chains.py  test_cheval_exception_scoping.py  test_circuit_breaker.py  test_claude_headless_adapter.py  test_codex_headless_adapter.py  test_concurrency.py  test_config.py  test_connection_lost_classification.py  test_conservation_invariant.py  test_credentials.py  test_epistemic_scopes.py  test_feature_flags.py  test_flatline_routing.py  test_gate_bearer_regex_coverage.py  test_gemini_headless_adapter.py  test_gemini_smoke.sh  test_google_adapter.py  test_google_streaming.py  test_haiku.py  test_kill_switch_consistency.py  test_max_input_token_gate_split.py  test_mock_fixture_dir.py  test_model_config_fallback_chain_invariants.py  test_modelinv_envelope_chain_walk.py  test_modelinv_streaming_field.py  test_modelinv_streaming_observed.py  test_multi_adapter.py  test_native_regression.py  test_openai_streaming.py  (+12 more)
.claude/adapters/tests/fixtures/: anthropic_response.json  anthropic_thinking_response.json  anthropic_tool_use_response.json  gemini-deep-research-completed.json  gemini-deep-research-create.json  gemini-deep-research-failed.json  gemini-deep-research-pending.json  gemini-error-429.json  gemini-safety-block.json  gemini-standard-response.json  gemini-thinking-response.json  openai_response.json  openai_tool_call_response.json
.claude/adapters/tests/fixtures/openai/: responses_empty.json  responses_multiblock_text.json  responses_pro_reasoning_tokens.json  responses_reasoning_summary.json  responses_refusal.json  responses_tool_call.json  responses_truncated.json
.claude/scripts/trace_analyzer/: __init__.py  __main__.py  classifier.py  matcher.py  models.py  orchestrator.py  parser.py  pyproject.toml  redactor.py  validate.py
.claude/scripts/trace_analyzer/tests/: __init__.py  test_classifier.py  test_models.py  test_parser.py  test_redactor.py
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/: globals.css  layout.tsx  page.tsx  (+3 more)
programs/purupuru-anchor/programs/purupuru-anchor/: Cargo.toml
programs/purupuru-anchor/programs/purupuru-anchor/src/: lib.rs
(+3210 files in other folders)
