[package]
name = "purupuru-anchor"
version = "0.1.0"
description = "purupuru awareness layer · claim_genesis_stone with Metaplex CPI mint"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "purupuru_anchor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
mpl-token-metadata = "5.1.0"
